tests/baselines/reference/duplicateStringIndexers.errors.txt
==== tests/cases/compiler/duplicateStringIndexers.ts (6 errors) ====
    // it is an error to have duplicate index signatures of the same kind in a type
    
    interface Number {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! duplicateStringIndexers.ts(5,5): error TS2232: Duplicate string index signature. Additional locations:
!!! 	duplicateStringIndexers.ts(4,5)
    }
    
    interface String {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! duplicateStringIndexers.ts(10,5): error TS2232: Duplicate string index signature. Additional locations:
!!! 	duplicateStringIndexers.ts(9,5)
    }
    
    interface Array<T> {
        [x: string]: T;
        [x: string]: T;
        ~~~~~~~~~~~~~~
!!! duplicateStringIndexers.ts(15,5): error TS2232: Duplicate string index signature. Additional locations:
!!! 	duplicateStringIndexers.ts(14,5)
    }
    
    class C {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! duplicateStringIndexers.ts(20,5): error TS2232: Duplicate string index signature. Additional locations:
!!! 	duplicateStringIndexers.ts(19,5)
    }
    
    interface I {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! duplicateStringIndexers.ts(25,5): error TS2232: Duplicate string index signature. Additional locations:
!!! 	duplicateStringIndexers.ts(24,5)
    }
    
    var a: {
        [x: string]: string;
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! duplicateStringIndexers.ts(30,5): error TS2232: Duplicate string index signature. Additional locations:
!!! 	duplicateStringIndexers.ts(29,5)
    }
    
    